fixed whitespace is landscape

--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ body {
     overflow-x: hidden;
 }
 @media (max-width: 767px){
-  body{
-  padding-right: 20px;
-  padding-left: 20px;
+  .wrapper{
+  padding-right: 0px;
+  padding-left: 0px;
   }
 }
 @media screen and (orientation: portrait){
